# stokhos

./: .clang-format  README.md  abstract_generator.hpp  apache_2.0.txt  meson.build  meson_options.txt  pcg_xsh_rs_lcg.hpp  pcg_xsl_rr_mcg.hpp  splitmix64.hpp  stokhos.hpp  truncated_generator.hpp  util.hpp  xoshiro256starstar.hpp
test/: cdecls.hpp  meson.build  pcg_xsh_rs_lcg.cpp  pcg_xsl_rr_mcg.cpp  pcg_xsl_rr_mcg_lower32.cpp  pcg_xsl_rr_mcg_upper32.cpp  xoshiro256starstar.cpp  xoshiro256starstar_crush.cpp  xoshiro256starstar_lower32.cpp  xoshiro256starstar_smallcrush.cpp  xoshiro256starstar_upper32.cpp
